// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Screen /> should handle "loading/loadingOverlayProps" props 1`] = `
<Screen
  loading={true}
  loadingOverlayProps={
    Object {
      "spinnerProps": Object {
        "size": "medium",
      },
    }
  }
>
  <Layer>
    <Portal
      containerInfo={
        <div>
          <div
            class="screen full-width"
          >
            <div
              class="loading-overlay fill"
            >
              <div>
                <svg
                  class="spinner size-medium"
                  height="48"
                  viewBox="0 0 48 48"
                  width="48"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    class="circle"
                    cx="24"
                    cy="24"
                    r="23"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      }
    >
      <div
        className="screen full-width"
      >
        <LoadingOverlay
          spinnerProps={
            Object {
              "size": "medium",
            }
          }
        >
          <div
            className="loading-overlay fill"
          >
            <Spinner
              size="medium"
            >
              <div>
                <svg
                  className="spinner size-medium"
                  height={48}
                  viewBox="0 0 48 48"
                  width={48}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    className="circle"
                    cx={24}
                    cy={24}
                    r={23}
                  />
                </svg>
              </div>
            </Spinner>
          </div>
        </LoadingOverlay>
      </div>
    </Portal>
  </Layer>
</Screen>
`;

exports[`<Screen /> should handle props 1`] = `
<Screen
  footer="Test footer"
  onBack={[MockFunction]}
  onClose={[MockFunction]}
  subtitle="Test subtitle"
  title="Test title"
  withBackButton={true}
  withCloseButton={true}
>
  <Layer>
    <Portal
      containerInfo={
        <div>
          <div
            class="screen full-width"
          >
            <div
              class="header full-width"
            >
              <svg
                aria-label="Вернуться назад"
                class="icon icon-block button button-back"
                height="24"
                role="button"
                viewBox="0 0 36 36"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.121 19.5l7.941 7.938c.583.585.583 1.539 0 2.125a1.511 1.511 0 0 1-2.125 0l-10.5-10.5a1.511 1.511 0 0 1 0-2.125l10.5-10.5a1.511 1.511 0 0 1 2.126 0c.582.585.582 1.539 0 2.125L8.12 16.5H31.5a1.5 1.5 0 0 1 0 3zm0 0"
                />
              </svg>
              <span
                class="size-16 line-height-24 color__gray87 weight-500 truncate"
              >
                Test title
              </span>
              <span
                class="size-12 line-height-12 color__gray38 truncate"
              >
                Test subtitle
              </span>
              <svg
                aria-label="Закрыть Test title"
                class="icon icon-block button button-close"
                height="24"
                role="button"
                viewBox="0 0 36 36"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.44 29.56a1.5 1.5 0 0 0 2.12 0L18 20.122l9.44 9.44a1.5 1.5 0 1 0 2.12-2.122L20.122 18l9.44-9.44a1.5 1.5 0 1 0-2.122-2.12L18 15.878l-9.44-9.44a1.5 1.5 0 0 0-2.12 2.122L15.878 18l-9.44 9.44a1.5 1.5 0 0 0 0 2.12z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            <div
              class="content full-width"
            >
              Test content
            </div>
            <div
              class="footer full-width"
            >
              Test footer
            </div>
          </div>
        </div>
      }
    >
      <div
        className="screen full-width"
      >
        <ScreenLayout
          childrenRef={[Function]}
          footer="Test footer"
          fullScrollThreshold={320}
          onBack={[Function]}
          onClose={[Function]}
          subtitle="Test subtitle"
          title="Test title"
          withBackButton={true}
          withCloseButton={true}
          withHeader={true}
        >
          <div
            className="header full-width"
          >
            <Icon
              aria-label="Вернуться назад"
              className="button button-back"
              icon={[Function]}
              onClick={[Function]}
              role="button"
              size={24}
            >
              <arrowLeft
                aria-label="Вернуться назад"
                className="icon icon-block button button-back"
                height={24}
                onClick={[Function]}
                role="button"
                viewBox="0 0 36 36"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  aria-label="Вернуться назад"
                  className="icon icon-block button button-back"
                  height={24}
                  onClick={[Function]}
                  role="button"
                  viewBox="0 0 36 36"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.121 19.5l7.941 7.938c.583.585.583 1.539 0 2.125a1.511 1.511 0 0 1-2.125 0l-10.5-10.5a1.511 1.511 0 0 1 0-2.125l10.5-10.5a1.511 1.511 0 0 1 2.126 0c.582.585.582 1.539 0 2.125L8.12 16.5H31.5a1.5 1.5 0 0 1 0 3zm0 0"
                  />
                </svg>
              </arrowLeft>
            </Icon>
            <Memo(Text)
              color="gray87"
              lineHeight={24}
              size={16}
              truncate={true}
              weight={500}
            >
              <span
                className="size-16 line-height-24 color__gray87 weight-500 truncate"
              >
                Test title
              </span>
            </Memo(Text)>
            <Memo(Text)
              color="gray38"
              lineHeight={12}
              size={12}
              truncate={true}
            >
              <span
                className="size-12 line-height-12 color__gray38 truncate"
              >
                Test subtitle
              </span>
            </Memo(Text)>
            <Icon
              aria-label="Закрыть Test title"
              className="button button-close"
              icon={[Function]}
              onClick={[Function]}
              role="button"
              size={24}
            >
              <crossIcon
                aria-label="Закрыть Test title"
                className="icon icon-block button button-close"
                height={24}
                onClick={[Function]}
                role="button"
                viewBox="0 0 36 36"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  aria-label="Закрыть Test title"
                  className="icon icon-block button button-close"
                  height={24}
                  onClick={[Function]}
                  role="button"
                  viewBox="0 0 36 36"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clipRule="evenodd"
                    d="M6.44 29.56a1.5 1.5 0 0 0 2.12 0L18 20.122l9.44 9.44a1.5 1.5 0 1 0 2.12-2.122L20.122 18l9.44-9.44a1.5 1.5 0 1 0-2.122-2.12L18 15.878l-9.44-9.44a1.5 1.5 0 0 0-2.12 2.122L15.878 18l-9.44 9.44a1.5 1.5 0 0 0 0 2.12z"
                    fillRule="evenodd"
                  />
                </svg>
              </crossIcon>
            </Icon>
          </div>
          <div
            className="content full-width"
          >
            Test content
          </div>
          <div
            className="footer full-width"
          >
            Test footer
          </div>
        </ScreenLayout>
      </div>
    </Portal>
  </Layer>
</Screen>
`;

exports[`<Screen /> should render without props 1`] = `
<Screen>
  <Layer>
    <Portal
      containerInfo={
        <div>
          <div
            class="screen full-width"
          >
            <div
              class="header full-width"
            >
              <span
                class="size-16 line-height-24 color__gray87 weight-500 truncate"
              />
              <svg
                aria-label="Закрыть undefined"
                class="icon icon-block button button-close"
                height="24"
                role="button"
                viewBox="0 0 36 36"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M6.44 29.56a1.5 1.5 0 0 0 2.12 0L18 20.122l9.44 9.44a1.5 1.5 0 1 0 2.12-2.122L20.122 18l9.44-9.44a1.5 1.5 0 1 0-2.122-2.12L18 15.878l-9.44-9.44a1.5 1.5 0 0 0-2.12 2.122L15.878 18l-9.44 9.44a1.5 1.5 0 0 0 0 2.12z"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
            <div
              class="content full-width"
            />
          </div>
        </div>
      }
    >
      <div
        className="screen full-width"
      >
        <ScreenLayout
          childrenRef={[Function]}
          fullScrollThreshold={320}
          onBack={[Function]}
          onClose={[Function]}
          withBackButton={false}
          withCloseButton={true}
          withHeader={true}
        >
          <div
            className="header full-width"
          >
            <Memo(Text)
              color="gray87"
              lineHeight={24}
              size={16}
              truncate={true}
              weight={500}
            >
              <span
                className="size-16 line-height-24 color__gray87 weight-500 truncate"
              />
            </Memo(Text)>
            <Icon
              aria-label="Закрыть undefined"
              className="button button-close"
              icon={[Function]}
              onClick={[Function]}
              role="button"
              size={24}
            >
              <crossIcon
                aria-label="Закрыть undefined"
                className="icon icon-block button button-close"
                height={24}
                onClick={[Function]}
                role="button"
                viewBox="0 0 36 36"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  aria-label="Закрыть undefined"
                  className="icon icon-block button button-close"
                  height={24}
                  onClick={[Function]}
                  role="button"
                  viewBox="0 0 36 36"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clipRule="evenodd"
                    d="M6.44 29.56a1.5 1.5 0 0 0 2.12 0L18 20.122l9.44 9.44a1.5 1.5 0 1 0 2.12-2.122L20.122 18l9.44-9.44a1.5 1.5 0 1 0-2.122-2.12L18 15.878l-9.44-9.44a1.5 1.5 0 0 0-2.12 2.122L15.878 18l-9.44 9.44a1.5 1.5 0 0 0 0 2.12z"
                    fillRule="evenodd"
                  />
                </svg>
              </crossIcon>
            </Icon>
          </div>
          <div
            className="content full-width"
          />
        </ScreenLayout>
      </div>
    </Portal>
  </Layer>
</Screen>
`;
